# Aura_AGI

./: CONVERSATION_MANAGEMENT.md  DOCKER_TROUBLESHOOTING.md  Dockerfile  LAUNCH_FIXES.md  PRE_FLIGHT_FIXES.md  README.md  docker-compose.unified.yml  env.example  launch-aura.ps1  pyproject.toml
docs/: FULL_SYSTEM_UPGRADE.md  Learning_engine_FRD.md  STAGE_2_3_COMPLETE.md
frontend/: ARCHITECTURE.md  CLEANUP_PLAN.md  package-lock.json  package.json
frontend/src/components/chat/: ChatInput.tsx
frontend/src/components/debug/: DebugPanel.tsx  StreamingVisualizer.tsx
frontend/src/components/emotion/: EmotionRadar.tsx
frontend/src/components/goal/: GoalPursuitModal.tsx
frontend/src/components/memory/: MemoryStream.tsx
frontend/src/components/settings/: SettingsPanel.tsx
frontend/src/contexts/: ServerStatusContext.tsx  SettingsContext.tsx
frontend/src/pages/: _app.tsx  chat.tsx  mission-control.tsx  settings.tsx
frontend/src/services/: apiService.ts  auraApiService.ts  socketService.ts
frontend/src/store/: index.ts
frontend/src/store/slices/: chatSlice.ts
frontend/src/styles/: globals.css
frontend/src/types/: aura.ts
scripts/: init_db.py  init_schema.surql
src/aura/: config.py  logging_config.py  main.py
src/aura/api/: websocket.py
src/aura/api/routes/: chat.py  conversations.py  goal.py  memory.py
src/aura/db/: client.py
src/aura/engines/: base.py
src/aura/engines/emotion/: engine.py  (+1 more)
src/aura/llm/: layers.py
src/aura/models/: emotion.py  goal.py  reflection.py
src/aura/orchestrator/: coordinator.py  message_bus.py  protocols.py
(+6 files in other folders)
